# oskernel2022-byte-os

./: .drone.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  kernel.S  makefile  need_support.txt
.cargo/: config
arch/src/: lib.rs
arch/src/rv_qemu/: interrupt.rs  mod.rs
docs/: 1.操作系统引导.md  2022操作系统内核赛答辩.pptx  README.md  index.html  report.md
fatfs/: Cargo.toml
fatfs/src/: boot_sector.rs  dir.rs  dir_entry.rs  file.rs  fs.rs  io.rs  lib.rs  table.rs  time.rs
kernel/: Cargo.toml  makefile
kernel-entry/: Cargo.toml
kernel-entry/src/: entry.asm  linker.ld  main.rs  virtio_impl.rs
kernel/src/: console.rs  lib.rs  main.rs  panic.rs  runtime_err.rs  virtio_impl.rs
kernel/src/device/: block.rs  mod.rs  sdcard.rs
kernel/src/elf/: mod.rs
kernel/src/fs/: cache.rs  file.rs  filetree.rs  mod.rs  stdio.rs
kernel/src/interrupt/: interrupt-kernel.asm  interrupt-user.asm  mod.rs  sys_call.rs  timer.rs
kernel/src/memory/: addr.rs  heap.rs  mod.rs  (+4 more)
linux-syscall/: Cargo.toml
linux-syscall/src/: lib.rs  mm.rs  net.rs  signal.rs  time.rs
linux-syscall/src/consts/: errors.rs  flags.rs  mod.rs  syscalls.rs
linux-syscall/src/fd/: dir.rs  open.rs  rw.rs  stat.rs
linux-syscall/src/task/: exit.rs  fork.rs  futex.rs  info.rs
os/: makefile
os/src/: panic.rs
output/: Cargo.toml
output/src/: console.rs  lib.rs
src/: console.rs  entry.asm  linker-k210.ld  linker.ld  main.rs  panic.rs  sbi.rs  virtio_impl.rs
src/device/: block.rs  mod.rs  sdcard.rs
src/fs/: fat32.rs  file.rs  filetree.rs  mod.rs  partition.rs
src/interrupt/: handler.rs  interrupt-back.asm  interrupt-kernel.asm  interrupt-user.asm  interrupt.asm  mod.rs  sys_call.rs  timer.rs
src/memory/: addr.rs  alloc.rs  heap.rs  mod.rs  page.rs  page_table.rs
src/sync/: mutex.rs  up.rs
src/syscall/: fs.rs  mod.rs
src/task/: change_task.asm  mod.rs  pipe.rs  task_queue.rs
task_scheduler/: Cargo.toml
task_scheduler/src/: lib.rs  pid.rs
user/: Cargo.toml  makefile
user/.cargo/: config
(+42 files in other folders)
