[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.8.0"
# 虚拟驱动
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }

device_tree = { git = "https://github.com/rcore-os/device_tree-rs", rev = "2fa8411" }
