[package]
name = "kernel-entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
board_qemu = []
board_k210 = []

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
kernel = { path = "../kernel" }
task_scheduler = { path = "../task_scheduler" }
output = { path = "../output" }
arch = { path = "../arch" }