[package]
name = "linux-syscall"
version = "0.1.0"
authors = ["yufeng <321353225@qq.com>"]
edition = "2018"

[features]
not_debug = []

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
kernel = { path = "../kernel" }
bitflags = "1.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
output = { path = "../output" }