[package]
name = "task_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../kernel" }
linux-syscall = { path = "../linux-syscall"}

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
